--- a/app/views/insurances/_form.html.erb
+++ b/app/views/insurances/_form.html.erb
@@ -22,8 +22,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :end_date %>
-    <%= form.date_select :end_date, id: :insurance_end_date %>
+    <%= form.label :expiration_date %>
+    <%= form.date_select :expiration_date, id: :insurance_end_date %>
   </div>
 
   <div class="actions">
