--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,6 +40,7 @@
 @import "bootstrap/pagination";
 @import "bootstrap/nav";
 @import "bootstrap/navbar";
+@import "bootstrap/badge";
 
 @import 'login';
 @import 'header';
