--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,7 +1,7 @@
 header {
 
   background: #6b7fa7;
-  padding: 15px 15px 135px 20px;
+  padding: 0 15px 135px 20px;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
   color: #fff;
 
@@ -32,7 +32,7 @@ header {
   }
 
   .navbar-collapse {
-    padding: 0 10px;
+    padding: 0 3px;
   }
 
   .user-dropdown {
@@ -63,9 +63,19 @@ header {
         font-size: 13px;
         color: #3e495f;
         &:hover {
-          background: #65b752;
+          background: #3e495f;
         }
       }
     }
+  }
+
+}
+
+.title-header {
+  h3 {
+    padding: 0 0 20px 14px  ;
+    color: #fff;
+    font-size: 25px;
+    font-weight: 100;
   }
 }
