--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -20,10 +20,30 @@ ul li {
 
 }
 .main {
-  margin-top: 104px;
+  margin-top: 65px;
   padding: 14px;
   .main-content {
     background: #fff;
-    padding: 10px;
+    padding: 0 20px 20px 20px;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
+    h4 {
+      font-weight: 300;
+      font-size: 19px;
+      line-height: 50px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      border-bottom: 1px solid #dedede;
+    }
+    .actions {
+      margin: 20px 0;
+    }
+    th {
+      font-size: 13px;
+    }
   }
+}
+
+h4 {
+  font-family: Roboto Slab, 'Open Sans', Arial, sans-serif;
 }
