--- a/app/views/fuel_types/index.html.erb
+++ b/app/views/fuel_types/index.html.erb
@@ -1,12 +1,17 @@
-<p id="notice"><%= notice %></p>
+<h4>Types de carburants</h4>
 
-<h1>Fuel Types</h1>
+<div class="actions form-inline">
+  <%= link_to new_fuel_type_path, :class => 'btn btn-info btn-sm' do %>
+      Ajouter un type de carburant
+  <% end %>
+</div>
 
-<table>
+<table class="table table-bordered table-responsive">
+
   <thead>
     <tr>
       <th>Name</th>
-      <th colspan="3"></th>
+      <th>Actions</th>
     </tr>
   </thead>
 
@@ -14,14 +19,19 @@
     <% @fuel_types.each do |fuel_type| %>
       <tr>
         <td><%= fuel_type.name %></td>
-        <td><%= link_to 'Show', fuel_type %></td>
-        <td><%= link_to 'Edit', edit_fuel_type_path(fuel_type) %></td>
-        <td><%= link_to 'Destroy', fuel_type, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <%= link_to fuel_type, :class => 'btn btn-outline-dark btn-sm' do %>
+              <%= fa_icon 'eye' %> Show
+          <% end %>
+          <%= link_to edit_fuel_type_path(fuel_type), :class => 'btn btn-outline-dark btn-sm' do %>
+              <%= fa_icon 'pencil' %> Edit
+          <% end %>
+          <%= link_to fuel_type, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-outline-dark btn-sm' do %>
+              <%= fa_icon 'trash' %> Destroy
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Fuel Type', new_fuel_type_path %>
