--- a/app/views/insurances/index.html.erb
+++ b/app/views/insurances/index.html.erb
@@ -1,31 +1,54 @@
-<p id="notice"><%= notice %></p>
+<h4>Assurances</h4>
 
-<h1>Insurances</h1>
+<div class="actions form-inline">
+  <%= link_to new_insurance_path, :class => 'btn btn-info btn-sm' do %>
+        Ajouter une nouvelle Assurance
+    <% end %>
+</div>
 
-<table>
+<table class="table table-bordered">
   <thead>
     <tr>
-      <th>Expense</th>
-      <th>Start date</th>
-      <th>End date</th>
-      <th colspan="3"></th>
+      <th>Assureur</th>
+      <th>Date de Début</th>
+      <th>Date d'expiration</th>
+      <th>Pièce jointe</th>
+      <th>Description</th>
+      <th>Actions</th>
+      <th>Montant en DH</th>
     </tr>
   </thead>
 
   <tbody>
     <% @insurances.each do |insurance| %>
       <tr>
-        <td><%= insurance.expense %></td>
+        <td><%= insurance.insurer.name %></td>
         <td><%= insurance.start_date %></td>
         <td><%= insurance.expiration_date %></td>
-        <td><%= link_to 'Show', insurance %></td>
-        <td><%= link_to 'Edit', edit_insurance_path(insurance) %></td>
-        <td><%= link_to 'Destroy', insurance, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= insurance.expense.attached_file %></td>
+        <td><%= insurance.expense.description %></td>
+        <td>
+          <%= link_to insurance, :class => 'btn btn-outline-primary btn-sm' do %>
+              <%= fa_icon 'eye' %> Consulter
+          <% end %>
+          <%= link_to edit_insurance_path(insurance), :class => 'btn btn-outline-primary btn-sm' do %>
+              <%= fa_icon 'pencil' %> Modifier
+          <% end %>
+          <%= link_to insurance, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-outline-primary btn-sm' do %>
+              <%= fa_icon 'trash' %> Suprimer
+          <% end %>
+        </td>
+        <td><b><%= insurance.expense.amount %></b></td>
       </tr>
     <% end %>
+
+    <tr class="table-active">
+      <td colspan="6"><b>Total</b></td>
+      <td>
+        <b><%= @insurances_sum %> DH</b>
+      </td>
+    </tr>
+
   </tbody>
+
 </table>
-
-<br>
-
-<%= link_to 'New Insurance', new_insurance_path %>
