--- a/app/views/insurances/show.html.erb
+++ b/app/views/insurances/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>End date:</strong>
-  <%= @insurance.end_date %>
+  <%= @insurance.expiration_date %>
 </p>
 
 <%= link_to 'Edit', edit_insurance_path(@insurance) %> |
