--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,6 +42,9 @@
 @import "bootstrap/navbar";
 @import "bootstrap/badge";
 
+// Datatables
+@import 'datatables';
+
 @import 'login';
 @import 'header';
 @import 'sidebar';
