Add Insurance Form Inputs
- Correct Fixed top Header
- Add Form Validation Error Message for each input
- Add Input group

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,6 +41,7 @@
 @import "bootstrap/nav";
 @import "bootstrap/navbar";
 @import "bootstrap/badge";
+@import "bootstrap/input-group";
 
 // Datatables
 @import 'datatables';
