--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,8 +1,10 @@
 body {
   background-color: #f2f7f8;
 }
-ul li {
+ul, li {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 .btn {
   &:focus, &:active {
@@ -15,32 +17,21 @@ ul li {
   font-family: 'Georgia', cursive;
   font-style: italic;
   font-weight: 100;
-
   &:hover {
     text-decoration: none;
   }
-
   span span {
     color: #10c469;
   }
-
 }
 .main {
   margin-top: 65px;
   padding: 14px;
   .main-content {
+    position: relative;
     background: #fff;
     padding: 0 20px 20px 20px;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
-    h4 {
-      font-weight: 300;
-      font-size: 19px;
-      line-height: 50px;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      border-bottom: 1px solid #dedede;
-    }
     .actions {
       margin: 20px 0;
       > div {
@@ -48,10 +39,29 @@ ul li {
         padding-left: 0;
       }
     }
+    h4 {
+      font-weight: 300;
+      font-size: 19px;
+      line-height: 50px;
+      padding: 10px 0;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      border-bottom: 1px solid #dedede;
+    }
     th {
       font-size: 14px;
       &:focus {
         outline: none;
+      }
+    }
+    form {
+      margin-top: 12px;
+      padding: 10px;
+      .actions {
+        display: inline-block;
+        text-align: right;
+        width: 100%;
       }
     }
   }
@@ -66,6 +76,49 @@ ul li {
   }
   table {
     font-size: 14px;
+    .td-actions {
+      text-align: center;
+      width: 120px;
+    }
+    td {
+      padding: 20px !important;
+    }
+  }
+  .input-group {
+    .field_with_errors input {
+      border-radius: 4px 0 0 4px;
+      border-right: none;
+    }
+  }
+  .field_with_errors {
+    width: 100%;
+    input, select {
+      border-color: red;
+      width: 100%;
+    }
+    .input-group-addon {
+      background: #ff0000;
+      color: #fff;
+    }
+  }
+  .text-error {
+    color: red;
+  }
+  .table-sum {
+    background-color: #f1f1f1;
+    color: #383838;
+    font-size: 18px;
+  }
+  &:before {
+    background: #6b7fa7;
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 154px;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
   }
 }
 
