--- a/app/views/breaks/edit.html.erb
+++ b/app/views/breaks/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Editing Break</h1>
+<h4>Editer cet Arrêt</h4>
 
 <%= render 'form', break: @break %>
 
-<%= link_to 'Show', @break %> |
-<%= link_to 'Back', breaks_path %>
+<%= link_to breaks_path, :class => 'badge badge-light' do %>
+    <%= fa_icon 'arrow-left' %> Retour
+<% end %>
+
+<%= link_to @break, :class => 'badge badge-light' do %>
+    <%= fa_icon 'eye' %> Consulter Detail
+<% end %>
