--- a/app/views/breaks/index.html.erb
+++ b/app/views/breaks/index.html.erb
@@ -1,31 +1,66 @@
-<p id="notice"><%= notice %></p>
+<h4>Arrêts</h4>
 
-<h1>Breaks</h1>
+<!-- # -->
+<div class="actions row">
 
-<table>
+  <div class="col-md-4">
+    <%= link_to new_break_path, :class => 'btn btn-info btn-sm' do %>
+        Ajouter un nouveau Arrêt
+    <% end %>
+  </div>
+
+  <div class="col-md-4 ml-auto">
+    <input type="search"
+           class="form-control"
+           id="search-break"
+           placeholder="Votre Recherche..." aria-label="Votre Recherche...">
+  </div>
+
+</div>
+
+<!-- # -->
+<table id="break-data" class="table table-bordered">
   <thead>
     <tr>
-      <th>Expense</th>
-      <th>Start date</th>
-      <th>End date</th>
-      <th colspan="3"></th>
+      <th>Cause</th>
+      <th>Date début</th>
+      <th>Date fin</th>
+      <th>Retard en Jours</th>
+      <th>Montant en DH</th>
+      <th class="td-actions">Actions</th>
     </tr>
   </thead>
 
   <tbody>
     <% @breaks.each do |b| %>
       <tr>
-        <td><%= b.expense %></td>
+        <td><%= b.break_cause.name %></td>
         <td><%= b.start_date %></td>
         <td><%= b.end_date %></td>
-        <td><%= link_to 'Show', b %></td>
-        <td><%= link_to 'Edit', edit_break_path(b) %></td>
-        <td><%= link_to 'Destroy', b, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= (b.end_date - b.start_date).to_i %> jours</td>
+        <td><%= b.expense.amount %></td>
+        <td>
+          <%= link_to b, :class => 'btn btn-outline-dark btn-sm' do %>
+              <%= fa_icon 'eye' %>
+          <% end %>
+          <%= link_to edit_break_path(b), :class => 'btn btn-outline-dark btn-sm' do %>
+              <%= fa_icon 'pencil' %>
+          <% end %>
+          <%= link_to b, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-outline-dark btn-sm' do %>
+              <%= fa_icon 'close' %>
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
+
+  <tfoot>
+    <tr class="table-sum">
+      <td colspan="4"><b>Total</b></td>
+      <td colspan="2">
+        <b><%= @breaks_sum %> DH</b>
+      </td>
+    </tr>
+  </tfoot>
+
 </table>
-
-<br>
-
-<%= link_to 'New Break', new_break_path %>
