--- a/app/views/breaks/new.html.erb
+++ b/app/views/breaks/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Break</h1>
+<h4>Ajouter un nouveau Arrêt</h4>
 
 <%= render 'form', break: @break %>
 
-<%= link_to 'Back', breaks_path %>
+<%= link_to breaks_path, :class => 'badge badge-light' do %>
+    <%= fa_icon 'arrow-left' %> Retour
+<% end %>
