--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -14,6 +14,22 @@ header {
 
   .navbar {
     padding: 0;
+    > div > ul {
+      > li > a {
+        display: block;
+        padding: 10px;
+        &:hover {
+          color: #fff;
+          background-color: #62769e;
+          transition: background-color 300ms linear;
+          text-decoration: none;
+        }
+      }
+    }
+  }
+
+  .nasvbar {
+    padding: 0;
     a {
       display: block;
       padding: 10px;
@@ -55,14 +71,14 @@ header {
       padding: 0;
     }
     .dropdown-item {
-      padding: 10px 0;
+      padding: 4px 0;
       > a {
         margin: 0;
-        padding: 5px 14px;
+        padding: 1px 14px;
         font-size: 13px;
         color: #3e495f;
         &:hover {
-          background: #3e495f;
+          text-decoration: none;
         }
       }
     }
