--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,138 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h4>Mon Profile</h4>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+    <%= devise_error_messages! %>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+    <!-- # -->
+    <div class="form-group row">
+      <%= f.label 'Email', class: 'col-sm-2 col-form-label'%>
+      <div class="col-sm-10">
+        <div class="input-group">
+          <%= f.email_field :email, class: 'form-control' %>
+          <span class="input-group-addon"><%= fa_icon 'envelope-o' %></span>
+        </div>
+      </div>
+    </div>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
+    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+      <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
     <% end %>
-  </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+    <!-- # -->
+    <div class="form-group row">
+      <%= f.label 'Mot de passe', class: 'col-sm-2 col-form-label'%>
+      <div class="col-sm-10">
+        <div class="input-group">
+          <%= f.password_field :password, class: 'form-control', autocomplete: 'off' %>
+          <span class="input-group-addon"><%= fa_icon 'key' %></span>
+        </div>
+        <% if @minimum_password_length %>
+            <small>laisser vide si vous ne voulez pas le modifier</small><br/>
+            <small><%= @minimum_password_length %> characters minimum</small>
+        <% end %>
+      </div>
+    </div>
 
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
-  </div>
+    <!-- # -->
+    <div class="form-group row">
+      <%= f.label 'Mot de passe confirmation', class: 'col-sm-2 col-form-label'%>
+      <div class="col-sm-10">
+        <div class="input-group">
+          <%= f.password_field :password_confirmation, class: 'form-control', autocomplete: 'off' %>
+          <span class="input-group-addon"><%= fa_icon 'key' %></span>
+        </div>
+      </div>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
+    <!-- # -->
+    <div class="form-group row">
+      <%= f.label 'Mot de passe actuel', class: 'col-sm-2 col-form-label'%>
+      <div class="col-sm-10">
+        <div class="input-group">
+          <%= f.password_field :current_password, class: 'form-control' %>
+          <span class="input-group-addon"><%= fa_icon 'key' %></span>
+        </div>
+      </div>
+    </div>
+
+    <!-- # -->
+    <div class="form-group row">
+      <%= f.label 'Nom Complet', class: 'col-sm-2 col-form-label'%>
+      <div class="col-sm-10">
+        <div class="input-group">
+          <%= f.text_field :full_name, class: 'form-control' %>
+          <span class="input-group-addon"><%= fa_icon 'user' %></span>
+        </div>
+      </div>
+    </div>
+
+    <!-- # -->
+    <div class="form-group row">
+      <%= f.label 'Téléphone Fixe', class: 'col-sm-2 col-form-label'%>
+      <div class="col-sm-10">
+        <div class="input-group">
+          <%= f.text_field :home_phone, class: 'form-control' %>
+          <span class="input-group-addon"><%= fa_icon 'phone' %></span>
+        </div>
+      </div>
+    </div>
+
+    <!-- # -->
+    <div class="form-group row">
+      <%= f.label 'Téléphone Portable', class: 'col-sm-2 col-form-label'%>
+      <div class="col-sm-10">
+        <div class="input-group">
+          <%= f.text_field :mobile_phone, class: 'form-control' %>
+          <span class="input-group-addon"><%= fa_icon 'mobile-phone' %></span>
+        </div>
+      </div>
+    </div>
+
+    <!-- # -->
+    <div class="form-group row">
+      <%= f.label 'Date de Naissance', class: 'col-sm-2 col-form-label'%>
+      <div class="col-sm-10">
+        <div class="input-group">
+          <%= f.date_field :birth_date, class: 'form-control' %>
+          <span class="input-group-addon"><%= fa_icon 'calendar' %></span>
+        </div>
+      </div>
+    </div>
+
+    <!-- # -->
+    <div class="form-group row">
+      <%= f.label 'CIN', class: 'col-sm-2 col-form-label'%>
+      <div class="col-sm-10">
+        <div class="input-group">
+          <%= f.text_field :cin, class: 'form-control' %>
+          <span class="input-group-addon"><%= fa_icon 'vcard' %></span>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="actions">
+      <%= f.submit 'Mettre à jours', class: 'btn btn-info' %>
+    </div>
+
 <% end %>
 
-<h3>Cancel my account</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<div class="alert alert-danger">
+  <h3>Suprimer ce compte</h3>
+  <p>
+    <%=
+      button_to 'Suprimmer ce compte',
+                registration_path(resource_name),
+                data: { confirm: 'Êtes vous sur?' },
+                method: :delete ,
+                class: 'btn btn-outline-danger'
+    %>
+  </p>
+</div>
 
-<%= link_to "Back", :back %>
+
+<%= link_to :back, :class => 'badge badge-light' do %>
+    <%= fa_icon 'arrow-left' %> Retour
+<% end %>
