--- a/app/views/damages/new.html.erb
+++ b/app/views/damages/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Damage</h1>
+<h4>New Damage</h4>
 
 <%= render 'form', damage: @damage %>
 
-<%= link_to 'Back', damages_path %>
+<%= link_to damages_path, :class => 'badge badge-light' do %>
+    <%= fa_icon 'arrow-left' %> Retour
+<% end %>
