--- a/app/views/damages/_form.html.erb
+++ b/app/views/damages/_form.html.erb
@@ -69,6 +69,13 @@
         </div>
 
         <div class="form-group row">
+          <%= expense_form.label :attached_file, class: 'col-sm-2 col-form-label' %>
+          <div class="col-sm-10">
+            <%= expense_form.file_field :attached_file, class: 'form-control' %>
+          </div>
+        </div>
+
+        <div class="form-group row">
           <%= expense_form.label :description, class: 'col-sm-2 col-form-label' %>
           <div class="col-sm-10">
             <%= expense_form.text_area :description,  cols: 10, rows: 10, class: 'form-control' %>
