--- a/app/views/owner_takes/_form.html.erb
+++ b/app/views/owner_takes/_form.html.erb
@@ -1,27 +1,77 @@
-<%= form_with(model: owner_take, local: true) do |form| %>
-  <% if owner_take.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(owner_take.errors.count, "error") %> prohibited this owner_take from being saved:</h2>
+<%= form_for @owner_take do |form| %>
 
-      <ul>
-      <% owner_take.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+    <div class="form-group row">
+      <%= form.label 'Propriétaire', class: 'col-sm-2 col-form-label' %>
+      <div class="col-sm-10">
+        <%= form.collection_select :owner_id, Owner.all, :id, :full_name, {
+          :multiple => false,
+          :include_blank => 'Selectionner un propriétaire',
+        },{ class: 'form-control' }
+        %>
+        <% if !@owner_take.errors.messages[:'owner'].empty?  %>
+            <ul>
+              <% @owner_take.errors.messages[:'owner'].each do |message| %>
+                  <li>
+                    <small class="form-text text-muted text-error"><%= message %></small>
+                  </li>
+              <% end %>
+            </ul>
+        <% end %>
+      </div>
     </div>
-  <% end %>
 
-  <div class="field">
-    <%= form.label :expense_id %>
-    <%= form.text_field :expense_id, id: :owner_take_expense_id %>
-  </div>
+    <div class="form-group row">
+      <%= form.label 'Date', class: 'col-sm-2 col-form-label' %>
+      <div class="col-sm-10">
+        <%= form.date_field :date, class: 'form-control' %>
 
-  <div class="field">
-    <%= form.label :owner_id %>
-    <%= form.text_field :owner_id, id: :owner_take_owner_id %>
-  </div>
+        <% if !@owner_take.errors.messages[:'date'].empty?  %>
+            <ul>
+              <% @owner_take.errors.messages[:'date'].each do |message| %>
+                  <li>
+                    <small class="form-text text-muted text-error"><%= message %></small>
+                  </li>
+              <% end %>
+            </ul>
+        <% end %>
 
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+      </div>
+    </div>
+
+    <%= form.fields_for :expense  do |expense_form| %>
+
+        <div class="form-group row">
+          <%= expense_form.label 'Montant', class: 'col-sm-2 col-form-label' %>
+          <div class="col-sm-10">
+            <div class="input-group">
+              <%= expense_form.number_field :amount, class: 'form-control' %>
+              <span class="input-group-addon">DH</span>
+            </div>
+
+            <% if !@owner_take.errors.messages[:'expense.amount'].empty?  %>
+                <ul>
+                  <% @owner_take.errors.messages[:'expense.amount'].each do |message| %>
+                      <li>
+                        <small class="form-text text-muted text-error"><%= message %></small>
+                      </li>
+                  <% end %>
+                </ul>
+            <% end %>
+
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <%= expense_form.label :description, class: 'col-sm-2 col-form-label' %>
+          <div class="col-sm-10">
+            <%= expense_form.text_area :description,  cols: 10, rows: 10, class: 'form-control' %>
+          </div>
+        </div>
+
+    <% end %>
+
+    <div class="actions">
+      <%= form.submit 'Sauvegarder', :class => 'btn btn-info' %>
+    </div>
+
 <% end %>
