--- a/app/views/owner_takes/edit.html.erb
+++ b/app/views/owner_takes/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Editing Owner Take</h1>
+<h4>Editing cette Recette</h4>
 
 <%= render 'form', owner_take: @owner_take %>
 
-<%= link_to 'Show', @owner_take %> |
-<%= link_to 'Back', owner_takes_path %>
+<%= link_to owner_takes_path, :class => 'badge badge-light' do %>
+    <%= fa_icon 'arrow-left' %> Retour
+<% end %>
+
+<%= link_to @owner_take, :class => 'badge badge-light' do %>
+    <%= fa_icon 'eye' %> Consulter Detail
+<% end %>
