--- a/app/views/owner_takes/new.html.erb
+++ b/app/views/owner_takes/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Owner Take</h1>
+<h4>New Owner Take</h4>
 
 <%= render 'form', owner_take: @owner_take %>
 
-<%= link_to 'Back', owner_takes_path %>
+<%= link_to owner_takes_path, :class => 'badge badge-light' do %>
+    <%= fa_icon 'arrow-left' %> Retour
+<% end %>
